<resources>
    <string name="app_name">Color Changing App</string>
    <string name="Box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How To Play</string>
    <string name="tap_buttons_and_screen_to_change_colors">Tap Buttons and Screen To Play</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
</resources>